--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet" type="text/css">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
@@ -91,15 +91,10 @@
             </header>
             <main>
                 <div class="container">
-                    <section class="slider">
+                    <section class="slider-section">
                         <h1 class="visually-hidden">Магазин мороженого «Глейси»</h1>
                         <h2 class="visually-hidden">Предложение</h2>
                         <div class="slide-offer">
-                            <div class="slider-controls">
-                                <label for="product-1">Первый</label>
-                                <label for="product-2">Второй</label>
-                                <label for="product-3">Третий</label>
-                            </div>
                             <ul class="slider-list">
                                 <li class="slider-item slide" id="slide1">
                                     <h3 class="slide-title">
@@ -120,6 +115,11 @@
                                     <a class="btn btn-slider" href="#">Давайте оба!</a>
                                 </li>
                             </ul>
+                            <div class="slider-controls">
+                                <label for="product-1">Первый</label>
+                                <label for="product-2">Второй</label>
+                                <label for="product-3">Третий</label>
+                            </div>
                         </div>
                     </section>
                     <section class="promo">
@@ -128,13 +128,13 @@
                             <h3 class="title-offer">Малинка даром!</h3>
                             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового
                                 варенья бесплатно.</p>
-                            <button class="btn btn-offer-raspberry">Хочу варенье!</button>
+                            <a href="#" class="btn btn-offer-raspberry">Хочу варенье!</a>
                         </div>
                         <div class="chocolate-offer">
                             <h3 class="title-offer">Шоколадки даром!</h3>
                             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки
                                 совершенно бесплатно.</p>
-                            <button class=" btn btn-offer-chocolate">Хочу шоколадки!</button>
+                            <a href="#" class="btn btn-offer-chocolate">Хочу шоколадки!</a>
                         </div>
                     </section>
                     <section class="best-sellers">
