--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                                     <a class="btn btn-slider" href="#">Давайте оба!</a>
                                 </li>
                             </ul>
-                            <div class="slider-controls">
-                                <label for="product-1">Первый</label>
-                                <label for="product-2">Второй</label>
-                                <label for="product-3">Третий</label>
+                            <div class="slider-controls" aria-label="Кнопки перекличения слайдеров">
+                                <label for="product-1">Первый слайд</label>
+                                <label for="product-2">Второй слайд</label>
+                                <label for="product-3">Третий слайд</label>
                             </div>
                         </div>
                     </section>
